# FitnessProfullstack

./: .gitignore  API_DOCUMENTATION.md  README.md  SECURITY.md  docker-compose.yml  start-dev.bat
backend/: .env  .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  check_db.py  copilot-instructions.md  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  clients.py  exercises.py  meals.py  payments.py  programs.py  progress.py  sessions.py  statistics.py  trainers.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py  security_utils.py
backend/app/models/: __init__.py  client.py  exercise.py  meal.py  payment.py  program.py  progress.py  trainer.py  user.py
backend/app/schemas/: __init__.py  auth.py  client.py  exercise.py  meal.py  payment.py  program.py  progress.py  trainer.py
backend/app/services/: __init__.py  client_service.py  exercise_service.py  meal_service.py  payment_service.py  program_service.py  progress_service.py  trainer_service.py  user_service.py
backend/app/utils/: init_db.py
backend/migrations/: env.py
backend/migrations/versions/: 44f041826fcd_create_all_initial_tables_with_updated_.py  fe189b3c1124_initial_migration.py
backend/tests/: conftest.py  test_main.py  utils.py
backend/tests/core/: __init__.py  test_security.py
backend/tests/endpoints/: __init__.py  test_auth_endpoints.py
backend/tests/services/: __init__.py  test_client_service.py  test_exercise_service.py  test_meal_service.py  test_payment_service.py  test_program_service.py  test_progress_service.py  test_trainer_service.py  test_user_service.py
docs/: DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT.md  TROUBLESHOOTING.md
(+111 files in other folders)
